# HCPSOTS

./: CMakeLists.txt  README.md
cmake/: geometry-central.cmake  polyscope.cmake
data/: ceps_spherical_uniformize.sh
src/: Mesh.h  bvh_wrapper.cpp  bvh_wrapper.h  colors.h  geometric_algorithms.h  hcp_sphere.cpp  hcp_sphere.h  hcpsots copy.h  hcpsots.cpp  hcpsots.h  hilbert_curve.cpp  hilbert_curve.h  pcg32.h  point_cloud_io.cpp  point_cloud_io.h  sampling.cpp  sampling.h  slice_geometry.cpp  slice_geometry.h  sort.cpp  sort.h  spherical_geometry.cpp  spherical_geometry.h  utils.h
tests/: .polyscope.ini  HCPSOTS_bluenoise.cpp  HCPSOTS_mesh.cpp  imgui.ini  test_NESOTS_bluenoise.cpp  test_NESOTS_mesh.cpp
utils/: .polyscope.ini  cube_sphere.py  cube_sphere_map.py  cube_sphere_ps.py  hilbert_curve.py  imgui.ini  mesh_sampling.py  mytest.ipynb  noise.py  periodogram.py  poisson_disc.py  sphere_noise copy.py  sphere_noise.py  utils.py  view_sphere_HCPSOTS.json
